# autosar-partial-model-merger

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
arxml_merger/: __init__.py  cli.py
arxml_merger/core/: __init__.py  exceptions.py  merger.py  models.py
arxml_merger/schema/: __init__.py  autosar_schema.py
arxml_merger/utils/: __init__.py  xml_utils.py
examples/: README.md  example_usage.py  partial_model_merge_demo.py
examples/basic_merge/: engine_control_base.arxml  engine_control_extended.arxml
examples/conflict_scenarios/: sensor_model_v1.arxml  sensor_model_v2.arxml
examples/scripts/: basic_merge_demo.py  cli_demo.py
tests/: test_merger.py  test_partial_model_merge.py
